tests/fixtures/fail/coalesce_option_rhs_mismatch.sc
use core.Option

let main(): i32 = { Option(i32).None ?? true }
